feat: project team info 조회 api 개발